# DataSphere-Autonomous-Data-Platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.api.yml  docker-compose.test.yml  pyproject.toml  stack.yaml
.github/workflows/: ci.yml  release.yml
configs/examples/: aws_production.yaml  azure_enterprise.yaml  gcp_analytics.yaml  local_minimal.yaml  on_premise_k8s.yaml
datasphere/: client.py  marketplace.py  plugins.py
datasphere/adapters/: __init__.py  base.py
datasphere/adapters/ai/: __init__.py  anthropic_adapter.py  azure_openai.py  lm_studio.py  mistral_adapter.py  ollama_adapter.py  openai_adapter.py  vllm.py
datasphere/adapters/bi/: __init__.py  evidence.py  metabase_adapter.py  powerbi.py  redash.py  superset_adapter.py  tableau.py
datasphere/adapters/catalog/: __init__.py  amundsen.py  datahub_adapter.py  marquez.py  openmetadata_adapter.py
datasphere/adapters/cloud/: __init__.py  aws_adapter.py  azure_adapter.py  gcp_adapter.py  kubernetes_adapter.py  local_docker.py
datasphere/adapters/ingestion/: __init__.py  airbyte_adapter.py  debezium.py  fivetran.py  kafka_connect.py  meltano_adapter.py  nifi.py
datasphere/adapters/monitoring/: __init__.py  elk.py  grafana_adapter.py  loki.py  opentelemetry.py  prometheus_adapter.py
datasphere/adapters/orchestration/: __init__.py  airflow.py  argo.py  dagster.py  kestra.py  prefect.py
datasphere/adapters/quality/: __init__.py  dbt_tests.py  deequ.py  great_expectations_adapter.py  soda_core.py
datasphere/adapters/security/: __init__.py  authentik.py  keycloak_adapter.py  vault_adapter.py
datasphere/adapters/storage/: __init__.py  adls.py  delta_lake.py  gcs.py  hdfs.py  hudi.py  iceberg.py  minio.py  s3.py
datasphere/adapters/transformation/: __init__.py  dbt_adapter.py  flink.py  polars_adapter.py  spark.py  sqlmesh.py
datasphere/adapters/vector/: __init__.py  chroma_adapter.py  milvus.py  pgvector_adapter.py  qdrant_adapter.py  weaviate_adapter.py
datasphere/adapters/warehouse/: __init__.py  azure_synapse.py  bigquery.py  clickhouse.py  databricks.py  duckdb.py  postgresql.py  redshift.py  snowflake.py
datasphere/agents/: __init__.py  base_agent.py  cloud_architect.py  cost_optimization.py  cost_optimizer.py  cost_tables.py  deployment.py  dialogue.py  infrastructure.py  mode_router.py  orchestrator.py  proposer.py  security_compliance.py  stack_advisor.py
datasphere/api/: __init__.py  app.py  artifact_store.py  auth.py  cache.py  db_migration.py  generation_utils.py  git_integration.py  job_store.py  job_store_redis.py  logging_config.py  metrics.py  models.py  notifications.py  openapi_examples.py  sse.py  tenancy.py  terraform_runner.py  tracing.py  webhooks.py  worker.py
datasphere/api/migrations/: alembic.ini  env.py
datasphere/cli/: discovery.py  main.py  run_agents.py  upgrade.py  wizard.py
datasphere/core/: config.py  registry.py
datasphere/generators/: __init__.py  airflow_dag.py  dagster_job.py  dbt_project.py  lineage.py  prefect_flow.py  stack_diff.py  templates.py  terraform.py
datasphere/models/: __init__.py  conversation.py  modes.py  output.py  request.py
docs/: architecture.md  quickstart.md  stack-choices.md
examples/: mode1_aws_sales.json  mode1_local_hospital.json  mode2_enterprise_healthcare.json  mode2_startup.json  request_aws_sales.json  request_local_hospital.json
examples/plugin_example/: README.md  pyproject.toml
examples/plugin_example/datasphere_plugin_example/: generator.py
infra/docker/: docker-compose.base.yml  docker-compose.bi.yml  docker-compose.monitoring.yml  docker-compose.orchestration.yml  docker-compose.security.yml  docker-compose.warehouse.yml
load_tests/: README.md  k6_script.js  locustfile.py
scripts/: bump_version.py  check_health.sh  dev_setup.sh  smoke_test.sh
tests/: conftest.py  test_api.py  test_artifact_store.py  test_auth_sse.py  test_bump_version.py  test_cache.py  test_cli.py  test_client.py  test_client_coverage.py  test_conversation_flow.py  test_cost_optimizer.py  test_cost_tables.py  test_coverage_agents.py  test_coverage_api.py  test_coverage_boost.py  test_coverage_cli.py  test_coverage_generators.py  test_db_migration.py  test_docker_integration.py  test_e2e.py  test_generators.py  test_generators_orchestrators.py  test_git_integration.py  test_lineage.py  test_marketplace.py  test_metrics.py  test_modes.py  test_notifications.py  test_orchestrator.py  test_orchestrator_coverage.py  test_pagination.py  test_plugins.py  test_rate_limit_per_endpoint.py  test_stack_diff.py  test_templates.py  test_tenancy.py  test_terraform_generator.py  test_terraform_plan.py  test_tracing.py  test_upgrade_coverage.py  (+4 more)
(+26 files in other folders)
