[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datasphere"
version = "0.1.0"
description = "Stack-agnostic, cloud-agnostic autonomous data platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
postgresql  = ["psycopg2-binary>=2.9", "sqlalchemy>=2.0"]
snowflake   = ["snowflake-connector-python>=3.0"]
bigquery    = ["google-cloud-bigquery>=3.0"]
redshift    = ["redshift-connector>=2.0"]
clickhouse  = ["clickhouse-connect>=0.6"]
duckdb      = ["duckdb>=0.9"]
airflow     = ["apache-airflow>=2.7"]
dagster     = ["dagster>=1.5"]
prefect     = ["prefect>=2.14"]
dbt         = ["dbt-core>=1.6"]
spark       = ["pyspark>=3.5"]
polars      = ["polars>=0.19"]
minio       = ["minio>=7.1"]
aws         = ["boto3>=1.28"]
azure       = ["azure-storage-blob>=12.0", "azure-identity>=1.15"]
gcp         = ["google-cloud-storage>=2.10"]
superset    = ["apache-superset>=3.0"]
openai      = ["openai>=1.0"]
anthropic   = ["anthropic>=0.20"]
mistral     = ["mistralai>=0.1"]
qdrant      = ["qdrant-client>=1.6"]
weaviate    = ["weaviate-client>=4.0"]
pgvector    = ["pgvector>=0.2"]
chroma      = ["chromadb>=0.4"]
prometheus  = ["prometheus-client>=0.18"]
vault       = ["hvac>=1.2"]

[project.scripts]
datasphere = "datasphere.cli.wizard:main"

[tool.hatch.build.targets.wheel]
packages = ["datasphere"]
