[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datasphere"
version = "1.2.0"
description = "Stack-agnostic, cloud-agnostic autonomous data platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0,<7",
    "click>=8.1,<9",
    "rich>=13.0,<14",
    "pydantic>=2.5,<3",
]

[project.optional-dependencies]
postgresql  = ["psycopg2-binary>=2.9,<3", "sqlalchemy>=2.0,<3"]
snowflake   = ["snowflake-connector-python>=3.0,<4"]
bigquery    = ["google-cloud-bigquery>=3.0,<4"]
redshift    = ["redshift-connector>=2.0,<3"]
clickhouse  = ["clickhouse-connect>=0.6,<1"]
duckdb      = ["duckdb>=0.9,<2"]
airflow     = ["apache-airflow>=2.7,<3"]
dagster     = ["dagster>=1.5,<2"]
prefect     = ["prefect>=2.14,<3"]
dbt         = ["dbt-core>=1.6,<2"]
spark       = ["pyspark>=3.5,<4"]
polars      = ["polars>=1.0,<2"]
minio       = ["minio>=7.1,<8"]
aws         = ["boto3>=1.28,<2"]
azure       = ["azure-storage-blob>=12.0,<13", "azure-identity>=1.15,<2"]
gcp         = ["google-cloud-storage>=2.10,<3"]
superset    = ["apache-superset>=3.0,<4"]
openai      = ["openai>=1.0,<2"]
anthropic   = ["anthropic>=0.20,<1"]
mistral     = ["mistralai>=0.1,<2"]
qdrant      = ["qdrant-client>=1.6,<2"]
weaviate    = ["weaviate-client>=4.0,<5"]
pgvector    = ["pgvector>=0.2,<1"]
chroma      = ["chromadb>=0.4,<1"]
prometheus  = ["prometheus-client>=0.18,<1"]
vault       = ["hvac>=1.2,<3"]
api         = ["fastapi>=0.111,<1", "uvicorn[standard]>=0.29,<1", "httpx>=0.27,<1"]
test        = ["pytest>=7.0,<9", "pytest-asyncio>=0.23,<1", "httpx>=0.27,<1",
               "pytest-cov>=4.0,<6"]

[project.scripts]
datasphere = "datasphere.cli.main:main"
datasphere-client = "datasphere.client:_cli_main"

[tool.hatch.build.targets.wheel]
packages = ["datasphere"]

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths      = ["tests"]
asyncio_mode   = "auto"
log_cli        = true
log_cli_level  = "WARNING"
filterwarnings = [
    "ignore::DeprecationWarning:starlette.*",
    "ignore::DeprecationWarning:httpx.*",
]

# ---------------------------------------------------------------------------
# Coverage configuration
# ---------------------------------------------------------------------------
[tool.coverage.run]
source   = ["datasphere"]
omit     = ["datasphere/api/templates/*", "*/__pycache__/*"]
branch   = true

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "def _cli_main",
    "@abstractmethod",
]
