[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "datasphere-plugin-example"
version = "0.1.0"
requires-python = ">=3.11"

[project.entry-points."datasphere.generators"]
example = "datasphere_plugin_example.generator:ExampleGenerator"
